# ai_resume_screening

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
configs/: train.yaml
dags/: resume_screening_training_pipeline.py
notebooks/: EDA.ipynb  EDA_SUMMARY.md
src/: config.py  data_ingestion.py  evaluate.py  ingest.py  models.py  preprocess.py  train.py  tune.py  validate_config.py  validate_data.py
tests/: test_config.py  test_models.py  test_preprocess.py  test_smoke.py
