[project]
name = "ai-screening"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "kagglehub>=0.4.1",
    "matplotlib>=3.10.8",
    "mlflow>=1.27.0",
    "numpy>=2.4.1",
    "optuna>=4.7.0",
    "pandas>=3.0.0",
    "protobuf<4",
    "pytest>=9.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "setuptools<70",
    "statsmodels>=0.14.6",
    "xgboost>=3.1.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "ruff>=0.15.0",
]

[tool.ruff]
exclude = ["notebooks"]
